Fix SMTP connection timeout with better configuration

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,9 @@ PORT=3000
 APP_URL=https://your-app-name.onrender.com
 
 # Email Configuration (Gmail SMTP)
+# Try port 465 (SSL) if 587 (TLS) is blocked by hosting platform
 SMTP_HOST=smtp.gmail.com
-SMTP_PORT=587
+SMTP_PORT=465
 SMTP_USER=sahilalvi769@gmail.com
 SMTP_PASS=qvcejjnlpmdilzze
 FROM_EMAIL=sahilalvi769@gmail.com
