Add SendGrid email support for deployment platforms

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # Server Configuration
 PORT=3000
-APP_URL=https://your-app-name.onrender.com
+APP_URL=https://login-page-inwt.onrender.com
 
 # Email Service Selection
 USE_SENDGRID=true
 
 # SendGrid Configuration (when USE_SENDGRID=true)
-SENDGRID_API_KEY=your-sendgrid-api-key-here
+SENDGRID_API_KEY=D97ECJ9DQWKFCNBLQEC9E2Z8
 FROM_EMAIL=sahilalvi769@gmail.com
 FROM_NAME=Vidyasaar Institute
 
