Add production deployment configuration with Brevo SMTP

--- a/.env.example
+++ b/.env.example
@@ -2,22 +2,17 @@
 PORT=3000
 APP_URL=https://login-page-inwt.onrender.com
 
-# Email Service Selection
-USE_SENDGRID=true
+# Email Service Selection (use false for Brevo SMTP)
+USE_SENDGRID=false
 
-# SendGrid Configuration (when USE_SENDGRID=true)
-SENDGRID_API_KEY=D97ECJ9DQWKFCNBLQEC9E2Z8
-FROM_EMAIL=sahilalvi769@gmail.com
-FROM_NAME=Vidyasaar Institute
-
-# Gmail SMTP Configuration (when USE_SENDGRID=false)
-# Try port 465 (SSL) if 587 (TLS) is blocked by hosting platform
-SMTP_HOST=smtp.gmail.com
-SMTP_PORT=465
-SMTP_USER=sahilalvi769@gmail.com
-SMTP_PASS=qvcejjnlpmdilzze
+# Brevo SMTP Configuration (Production)
+SMTP_HOST=smtp-relay.brevo.com
+SMTP_PORT=587
+SMTP_USER=9a07ac001@smtp-brevo.com
+SMTP_PASS=your-brevo-smtp-key-here
 FROM_EMAIL=sahilalvi769@gmail.com
 FROM_NAME=Vidyasaar Institute
 
 # Admin Configuration
 ADMIN_EMAIL=sahilalvi769@gmail.com
+NODE_ENV=production
