--- a/.env.example
+++ b/.env.example
@@ -2,14 +2,8 @@
 PORT=3000
 APP_URL=https://login-page-inwt.onrender.com
 
-# Email Service Selection (use false for Brevo SMTP)
-USE_SENDGRID=false
-
-# Brevo SMTP Configuration (Production)
-SMTP_HOST=smtp-relay.brevo.com
-SMTP_PORT=587
-SMTP_USER=9a07ac001@smtp-brevo.com
-SMTP_PASS=your-brevo-smtp-key-here
+# Brevo API Configuration (Production)
+BREVO_API_KEY=your-brevo-api-key-here
 FROM_EMAIL=sahilalvi769@gmail.com
 FROM_NAME=Vidyasaar Institute
 
