--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/vidyasar/vidyasar-web#readme",
   "description": "",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@sendgrid/mail": "^8.1.6",
     "express": "^5.1.0",
     "nodemailer": "^7.0.10",
