Fix: Add dotenv, update .gitignore, add Brevo API test - OTP system ready

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ PORT=3000
 APP_URL=https://login-page-inwt.onrender.com
 
 # Brevo API Configuration (Production)
+# Get your API key from: https://app.brevo.com/settings/keys/api
 BREVO_API_KEY=your-brevo-api-key-here
 FROM_EMAIL=sahilalvi769@gmail.com
 FROM_NAME=Vidyasaar Institute
