--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Node modules
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # Composer dependencies
 /backend/vendor/
 
@@ -5,7 +11,6 @@
 /comment_backups/
 
 # Environment variables file
-# If you use a .env file for environment variables, it's a good practice to ignore it.
 .env
 .env.local
 .env.*.local
@@ -22,5 +27,5 @@
 .DS_Store
 Thumbs.db
 
-#vendor files
+# Vendor files
 /vendor/
