--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@getbrevo/brevo": "^3.0.1",
     "@sendgrid/mail": "^8.1.6",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemailer": "^7.0.10",
     "nodemon": "^3.1.10"
